--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     background-image: url("rogov-eKFMSe25CrM-unsplash.jpg");
     background-size: cover;
     height: 100%;
-    width: 30%;
+    width: 50%;
 }
 
 .heading {
@@ -36,9 +36,25 @@ body {
 }
 
 
-.right {
-    
+.forms {
+    display: flex;
+    flex-direction:column;
+    font-family:'Courier New', Courier, monospace;
 }
+
+.credits {
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    color: white;
+}
+
+.first, .second, .third {
+    width: 60%;
+    float:left;
+    margin: 10px;
+}
+
 
 .encouragement {
     font-size: 24px;
@@ -56,4 +72,56 @@ body {
 @font-face {
     font-family: "Norse";
     src:url("Norse-Bold.otf");
+}
+
+.first_name, .email, .password {
+    float: left;
+    width: 50%;
+}
+
+.last_name, .phone_number, .confirm_password {
+    float: right;
+    width: 50%;
+}
+
+#first_name, #last_name, #user_email, #phone_number, #user_password, #confirm_password {
+    border-radius: 5px;
+    border-color: rgb(219, 219, 219);
+    border-width: thin;
+}
+
+#first_name:focus, #last_name:focus, #user_email:focus, #phone_number:focus {
+    box-shadow: 2px 2px rgb(187, 187, 187);
+    border-color: rgb(46, 46, 255);
+    border-width: thin;
+}
+
+.user_email:invalid {
+    border-color: red;
+}
+
+.button {
+    background-color: darkslategray;
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.login_reminder{
+    font-size: 18px;
+    font-family:'Courier New', Courier, monospace;
+    margin: 10px;
+}
+
+a:link {
+    text-decoration: none;
+    color:rgb(117, 173, 173);
+}
+
+a:visited {
+    text-decoration: none;
+    color:rgb(117, 173, 173);
 }
